--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<title>Splat ECS Starter Project</title>
+	<title>Glazing Lazers - ECS</title>
 
 		<style type="text/css">
 		html, body {
@@ -15,38 +15,22 @@
 			height: 100%;
 			overflow: hidden;
 		}
-		body {
-			background-color: #eeeeee;
-			color: #000;
-		}
-		h1 {
-			text-align: center;
-		}
 		canvas {
+			width: 100%;
+			max-width: 1920px;
+			height: auto;
 			display: block;
-			margin: 10px auto;
-			
-			top: 0;
-			right: 0;
-			bottom: 0;
-			left: 0;
-			padding: 0;
+
 			-webkit-user-select: none;
 			-moz-user-select: none;
 			-ms-user-select: none;
 			-o-user-select: none;
 			user-select: none;
 		}
-		a{
-			display: block;
-			width: intrinsic;
-			margin: 10px auto; 
-			text-align: center;
-		}
 	</style>
 </head>
 <body>
-	<canvas id="canvas" width="1136" height="640"></canvas>
+	<canvas id="canvas" width="1920" height="1080"></canvas>
 	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
