--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
 		<style type="text/css">
 		html, body {
+			background: #171717;
 			margin: 0;
 			padding: 0;
 			width: 100%;
@@ -16,11 +17,13 @@
 			overflow: hidden;
 		}
 		canvas {
-			width: 100%;
-			max-width: 1920px;
-			height: auto;
+			border-radius: 25px;
+			border: 5px solid #534F4E;
 			display: block;
-
+			margin: 20px auto;
+			height: 95vh;
+			width: auto;
+			display: block;
 			-webkit-user-select: none;
 			-moz-user-select: none;
 			-ms-user-select: none;
@@ -30,7 +33,7 @@
 	</style>
 </head>
 <body>
-	<canvas id="canvas" width="1920" height="1080"></canvas>
+	<canvas id="canvas" width="960" height="1280"></canvas>
 	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
