--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,8 @@
 			overflow: hidden;
 		}
 		canvas {
-			border-radius: 25px;
-			border: 5px solid #534F4E;
-			display: block;
-			margin: 20px auto;
-			height: 95vh;
-			width: auto;
-			display: block;
+			width: 100%;
+			height: 100%;
 			-webkit-user-select: none;
 			-moz-user-select: none;
 			-ms-user-select: none;
